Added description and service duration to companies. Check /api-docs for further info
