# controllers/companies/access.js
@@ -14,11 +14,11 @@ let get = async (req, res) => {
         if (req.query.name){
             // Fetch just one company
             let namee = req.query.name
-            const company = await Company.find({name: {"$regex": namee, "$options": "i"}}, function(err,docs){}).select('name nif email category address location')
+            const company = await Company.find({name: {"$regex": namee, "$options": "i"}}, function(err,docs){}).select('name nif email category description service_duration address location')
             res.send(company)
         } else {
             // Fetch all companies
-            const companies = await Company.find({}, {name: true, nif: true, email: true, category: true, address: true, location: true})
+            const companies = await Company.find({}, {name: true, nif: true, email: true, category: true, description: true, service_duration: true, address: true, location: true})
             res.send(companies)
         }
     } catch {
@@ -31,7 +31,7 @@ let fetchCompany = async (req, res) => {
     try {
         const company = await Company.findOne({ nif: req.params.nif })
         res.status(200)
-        res.send({name: company.name, email: company.email, category: company.category, address: company.address, location: company.location})
+        res.send({name: company.name, email: company.email, category: company.category, description: company.description, service_duration: company.service_duration, address: company.address, location: company.location})
     } catch {
         res.status(404)
         res.send({error: "Company not found"})
@@ -60,6 +60,10 @@ let register = async (req, res) => {
                 salt: password.salt,
                 category: req.body.category,
                 address: req.body.address,
+                // Default description and service duration
+                description: '',
+                service_duration: 0,
+                // TODO calculate coords
                 location: {
                     type: "Point",
                     coordinates: [req.body.lat,  req.body.long]
@@ -95,6 +99,8 @@ let login = async (req, res) => {
                         nif:company.nif,
                         id:company._id,
                         category:company.category,
+                        description: company.description,
+                        service_duration: company.service_duration,
                         address: company.address,
                         location: company.location
                     },
@@ -136,6 +142,12 @@ let update = async (req, res) => {
         }
         if (req.body.address) {
             company.address = req.body.address
+        }
+        if (req.body.description) {
+            company.description = req.body.description
+        }
+        if (req.body.duration) {
+            company.service_duration = req.body.duration
         }
 
         await company.save()
