# models/company.js
@@ -1,4 +1,4 @@
-const mongoose = require( 'mongoose' );
+const mongoose = require( 'mongoose' )
 // Company
 const company = new mongoose.Schema({
     name : { type: String, required: true},
@@ -8,11 +8,14 @@ const company = new mongoose.Schema({
     salt : { type : String, required: true},
     category: { type: String, required: true},
     address: { type: String, required: true},
+    description: { type: String, required: true},
+    // Duration needs to be in **minutes**
+    service_duration: { type: Number},
     location: {
-        type: { type: String },
+        type: { type: String, required: true},
         coordinates: [Number]
     }
 });
-company.index({location: '2dsphere'});
+company.index({location: '2dsphere'})
 
 module.exports = mongoose.model("company", company)
